--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,39 @@
 [project]
 name = "gitcommit-ai"
 version = "0.1.0"
-description = "AI-powered git commit message generator"
+description = "AI-powered git commit message generator with 7 providers, git hooks, and custom prompts"
 authors = [
-    {name = "GitCommit AI Contributors"}
+    {name = "Yury Gagarin", email = "yurcheg13@gmail.com"}
 ]
 readme = "README.md"
 requires-python = ">=3.11"
 license = {text = "MIT"}
+keywords = [
+    "git", "commit", "ai", "commit-message", "conventional-commits",
+    "ollama", "openai", "anthropic", "deepseek", "gitmoji"
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Version Control :: Git",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
 dependencies = [
     "httpx>=0.27.0",
     "python-dotenv>=1.0.0",
 ]
+
+[project.urls]
+Homepage = "https://github.com/gagarinyury/gitcommit-ai"
+Repository = "https://github.com/gagarinyury/gitcommit-ai"
+Issues = "https://github.com/gagarinyury/gitcommit-ai/issues"
+Documentation = "https://github.com/gagarinyury/gitcommit-ai#readme"
 
 [project.optional-dependencies]
 dev = [
@@ -21,6 +43,10 @@ dev = [
     "ruff>=0.3.0",
     "mypy>=1.8.0",
 ]
+publish = [
+    "build>=1.0.0",
+    "twine>=4.0.0",
+]
 
 [project.scripts]
 gitcommit-ai = "gitcommit_ai.cli.main:main"
@@ -28,6 +54,12 @@ gitcommit-ai = "gitcommit_ai.cli.main:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatchling.build]
+include = [
+    "src/gitcommit_ai/**/*.py",
+    "src/gitcommit_ai/prompts/templates/*.txt",
+]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
